// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributePlot renders correctly for bool 1`] = `
<PlotlyComponent
  data={
    Array [
      Object {
        "line": Object {
          "shape": "hv",
        },
        "marker": Object {
          "color": "#7986cb",
        },
        "mode": "lines+points",
        "name": "Normal",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          1,
          0,
          1,
        ],
      },
      Object {
        "line": Object {
          "shape": "hv",
        },
        "marker": Object {
          "color": "#fff",
        },
        "mode": "lines+points",
        "name": "Minor",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
      Object {
        "line": Object {
          "shape": "hv",
        },
        "marker": Object {
          "color": "#f44336",
        },
        "mode": "lines+points",
        "name": "Major",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
      Object {
        "line": Object {
          "dash": "dash",
          "shape": "hv",
        },
        "marker": Object {
          "color": "#303f9f",
        },
        "mode": "lines+points",
        "name": "Disconnected",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
    ]
  }
  debug={false}
  layout={
    Object {
      "autosize": true,
      "datarevision": "undefined#undefined#undefined#p:undefined#c:undefined",
      "legend": Object {
        "font": Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      },
      "paper_bgcolor": "#fafafa",
      "plot_bgcolor": "#fafafa",
      "xaxis": Object {
        "color": "rgba(0, 0, 0, 0.87)",
      },
      "yaxis": Object {
        "color": "rgba(0, 0, 0, 0.87)",
      },
    }
  }
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  useResizeHandler={true}
/>
`;

exports[`attributePlot renders correctly for changing alarm state 1`] = `
<PlotlyComponent
  data={
    Array [
      Object {
        "line": Object {
          "shape": "linear",
        },
        "marker": Object {
          "color": "#7986cb",
        },
        "mode": "lines+points",
        "name": "Normal",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          1,
          null,
          2,
        ],
      },
      Object {
        "line": Object {
          "shape": "linear",
        },
        "marker": Object {
          "color": "#fff",
        },
        "mode": "lines+points",
        "name": "Minor",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          -1,
          null,
        ],
      },
      Object {
        "line": Object {
          "shape": "linear",
        },
        "marker": Object {
          "color": "#f44336",
        },
        "mode": "lines+points",
        "name": "Major",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
      Object {
        "line": Object {
          "dash": "dash",
          "shape": "linear",
        },
        "marker": Object {
          "color": "#303f9f",
        },
        "mode": "lines+points",
        "name": "Disconnected",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
    ]
  }
  debug={false}
  layout={
    Object {
      "autosize": true,
      "datarevision": "undefined#undefined#undefined#p:undefined#c:undefined",
      "legend": Object {
        "font": Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      },
      "paper_bgcolor": "#fafafa",
      "plot_bgcolor": "#fafafa",
      "xaxis": Object {
        "color": "rgba(0, 0, 0, 0.87)",
      },
      "yaxis": Object {
        "color": "rgba(0, 0, 0, 0.87)",
      },
    }
  }
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  useResizeHandler={true}
/>
`;

exports[`attributePlot renders correctly for number 1`] = `
<PlotlyComponent
  data={
    Array [
      Object {
        "line": Object {
          "shape": "linear",
        },
        "marker": Object {
          "color": "#7986cb",
        },
        "mode": "lines+points",
        "name": "Normal",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          1,
          -1,
          2,
        ],
      },
      Object {
        "line": Object {
          "shape": "linear",
        },
        "marker": Object {
          "color": "#fff",
        },
        "mode": "lines+points",
        "name": "Minor",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
      Object {
        "line": Object {
          "shape": "linear",
        },
        "marker": Object {
          "color": "#f44336",
        },
        "mode": "lines+points",
        "name": "Major",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
      Object {
        "line": Object {
          "dash": "dash",
          "shape": "linear",
        },
        "marker": Object {
          "color": "#303f9f",
        },
        "mode": "lines+points",
        "name": "Disconnected",
        "type": "scatter",
        "x": Array [
          1970-01-01T00:00:01.000Z,
          1970-01-01T00:00:02.000Z,
          1970-01-01T00:00:03.000Z,
        ],
        "y": Array [
          null,
          null,
          null,
        ],
      },
    ]
  }
  debug={false}
  layout={
    Object {
      "autosize": true,
      "datarevision": "undefined#undefined#undefined#p:undefined#c:undefined",
      "legend": Object {
        "font": Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      },
      "paper_bgcolor": "#fafafa",
      "plot_bgcolor": "#fafafa",
      "xaxis": Object {
        "color": "rgba(0, 0, 0, 0.87)",
      },
      "yaxis": Object {
        "color": "rgba(0, 0, 0, 0.87)",
      },
    }
  }
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  useResizeHandler={true}
/>
`;
